--- a/views/programas/centerBox/detalleProg.phtml
+++ b/views/programas/centerBox/detalleProg.phtml
@@ -159,9 +159,9 @@
                     <div class="blink" style="float: right;"><button class="btn btn-warning btn-sm" > &iexcl; DISPONIBLE ! </button><?php //echo $objOpcProg->getEstado();  ?></div>
         <?php } ?>
                 <div style="float: right;">
-                    <a data-toggle="modal" href="#myModal" onclick="fadeIn('detallePopup');
+                    <a data-toggle="modal" href="#myModal2" onclick="fadeIn('detallePopup');
                             $('#divPopupIn').css('overflow-y', 'scroll');
-                            abrePopupImprimirProg('divPopupIn', '<?php echo BASE_URL; ?>programas/imprimir', 'tituloPopup', 'Vista Previa',
+                            abrePopupImprimirProg('divPopupIn', '<?php echo BASE_URL; ?>programas/imprimir', 'tituloPopup2', 'Vista Previa',
                                                     <?php echo htmlspecialchars(json_encode($DP_thHot)); ?>,
                                                     <?php echo htmlspecialchars(json_encode($DP_hoteles)); ?>,
                                                     <?php echo htmlspecialchars(json_encode($DP_planAl)); ?>,
@@ -177,9 +177,9 @@
                                                     '<?php echo $this->form; ?>');">
                         <img src="<?php echo $_layoutParamsCB['ruta_img']; ?>print.png" border='0' height='20' title='Imprimir' width="24" style="margin-left:5px;"/>
                     </a>
-                    <a href="#" onclick="fadeIn('detallePopup');
+                    <a href="#myModal2" data-toggle="modal" onclick="fadeIn('detallePopup');
                             $('#divPopupIn').css('overflow-y', 'scroll');
-                            abrePopup('divPopupIn', '<?php echo BASE_URL; ?>bloqueos/notas', 'tituloPopup', 'Nota de Programa', '<?php echo $objOpcProg->getIdOpc(); ?>', '<?php echo $this->form; ?>');" title='Nota opcion'><img src="<?php echo $_layoutParamsCB['ruta_img']; ?>nota.png" width="24" style="margin-left:5px;" ></a>
+                            abrePopup('divPopupIn', '<?php echo BASE_URL; ?>bloqueos/notas', 'tituloPopup2', 'Nota de Programa', '<?php echo $objOpcProg->getIdOpc(); ?>', '<?php echo $this->form; ?>');" title='Nota opcion'><img src="<?php echo $_layoutParamsCB['ruta_img']; ?>nota.png" width="24" style="margin-left:5px;" ></a>
                 </div>
             </div>
             <div class="panel-body">
@@ -189,13 +189,13 @@
                     <table cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered" style="font-size:12px; width: 100%; margin-top: 20px;" align='center'> <!-- class="table table-striped table-bordered" -->
                         <thead>
                             <tr style="background-color:#34495e; color: #FFFFFF" role="row">
-                                <th role="columnheader" style="padding-left: 2px;width: 122px;">Hotel</th>
+                                <th role="columnheader" style="padding-left: 2px;width: 122px; text-align: center;">Hotel</th>
                                 <!--<th role="columnheader" style="padding-left: 2px; width: 300px;">Direcci&oacute;n</th>-->
-                                <th role="columnheader" style="padding-left: 2px; width: 80px;">Categoria</th>
-                                <th role="columnheader" style="padding-left: 2px; width: 100px;">Habitaci&oacute;n</th>
-                                <th role="columnheader" style="padding-left: 2px; width: 100px;">Plan Alimenticio</th>
-                                <th role="columnheader" style="padding-left: 2px; width: 50px;"></th>
-                                <th role="columnheader" style="padding-left: 2px; width: 50px;"></th>
+                                <th role="columnheader" style="padding-left: 2px; width: 80px;text-align: center;" >Categoria</th>
+                                <th role="columnheader" style="padding-left: 2px; width: 100px;text-align: center;" >Habitaci&oacute;n</th>
+                                <th role="columnheader" style="padding-left: 2px; width: 100px;text-align: center;" >Plan Alimenticio</th>
+                                <th role="columnheader" style="padding-left: 2px; width: 50px;text-align: center;"></th>
+                                <th role="columnheader" style="padding-left: 2px; width: 50px;text-align: center;"></th>
                                 <!--<th role="columnheader" style="padding-left: 2px; width: 50px;"></th>-->
 
                             </tr>
@@ -206,9 +206,9 @@
                                     ?>
                             <tr>
                                 <td style="color: #DF5F00; padding: 2px; vertical-align: middle;">
-                                    <a id="tooltip_hotel_<?php echo $objOpcProg->getClaveOpc(); ?>"  style="cursor:pointer"onClick="fadeIn('detallePopup');
+                                    <a id="tooltip_hotel_<?php echo $objOpcProg->getClaveOpc(); ?>"  data-toggle='modal' href='#myModal2' style="cursor:pointer"onClick="fadeIn('detallePopup');
                                             $('#divPopupIn').css('overflow-y', 'scroll');
-                                            abrePopup('divPopupIn', '<?php echo BASE_URL; ?>bloqueos/servicios', 'tituloPopup', '<?php echo $DP_hoteles[$i]; ?>', <?php echo $DP_cod_hoteles[$i] ?>, '<?php echo $this->form; ?>');"><?php echo $DP_hoteles[$i]; ?></a>
+                                            abrePopup('divPopupIn', '<?php echo BASE_URL; ?>bloqueos/servicios', 'tituloPopup2', '<?php echo $DP_hoteles[$i]; ?>', <?php echo $DP_cod_hoteles[$i] ?>, '<?php echo $this->form; ?>');"><?php echo $DP_hoteles[$i]; ?></a>
                                 </td>
                                 <!--<td style="padding: 2px; vertical-align: middle;"><?php echo $DP_dirHot[$i]; ?></td>-->
                                 <td style="padding: 2px; vertical-align: middle;">
@@ -230,29 +230,29 @@
                                 </td>
 
                                 <td style="padding: 2px; vertical-align: middle;">
-                                    <a data-toggle='modal' href='#myModal' 
+                                    <a data-toggle='modal' href='#myModal2' 
                                        onClick="fadeIn('detallePopup');
                                                $('#divPopupIn').css('overflow-y', 'scroll');
-                                               abrePopupHab('divPopupIn', '<?php echo BASE_URL; ?>bloqueos/fotosTipoHab', 'tituloPopup', 'Fotos Tipo Habitaci&oacute;n', '<?php echo $DP_codthHot[$i]; ?>', <?php echo $DP_cod_hoteles[$i]; ?>, '<?php echo $this->form; ?>');">
+                                               abrePopupHab('divPopupIn', '<?php echo BASE_URL; ?>bloqueos/fotosTipoHab', 'tituloPopup2', 'Fotos Tipo Habitaci&oacute;n', '<?php echo $DP_codthHot[$i]; ?>', <?php echo $DP_cod_hoteles[$i]; ?>, '<?php echo $this->form; ?>');">
             <?php echo $DP_thHot[$i]; ?>
                                     </a>
                                 </td>
                                 <td style="padding: 2px; vertical-align: middle;">
             <?php echo $DP_planAl[$i]; ?>
                                 </td>
-                                <td>
-                                    <a data-toggle="modal" href="#myModal" 
+                                <td style="text-align: center;">
+                                    <a data-toggle="modal" href="#myModal2" 
                                        onClick="fadeIn('detallePopup');
                                                $('#divPopupIn').css('overflow-y', 'scroll');
-                                               abrePopup('divPopupIn', '<?php echo BASE_URL; ?>bloqueos/fotosHotel', 'tituloPopup', 'Fotos Hotel', <?php echo $DP_cod_hoteles[$i]; ?>, '<?php echo $this->form; ?>');">
+                                               abrePopup('divPopupIn', '<?php echo BASE_URL; ?>bloqueos/fotosHotel', 'tituloPopup2', 'Fotos Hotel', <?php echo $DP_cod_hoteles[$i]; ?>, '<?php echo $this->form; ?>');">
                                         <img src="<?php echo $_layoutParamsCB['ruta_img']; ?>foto.jpg" border='0' height='25' title='Fotos' />
                                     </a>
                                 </td>
-                                <td>
-                                    <a data-toggle="modal" href="#myModal" 
+                                <td style="text-align: center;">
+                                    <a data-toggle="modal" href="#myModal2" 
                                        onClick="fadeIn('detallePopup');
                                                $('#divPopupIn').css('overflow-y', 'scroll');
-                                               abrePopup('divPopupIn', '<?php echo BASE_URL; ?>bloqueos/mapas', 'tituloPopup', 'Google Maps', <?php echo $DP_cod_hoteles[$i]; ?>, '<?php echo $this->form; ?>');" >
+                                               abrePopup('divPopupIn', '<?php echo BASE_URL; ?>bloqueos/mapas', 'tituloPopup2', 'Google Maps', <?php echo $DP_cod_hoteles[$i]; ?>, '<?php echo $this->form; ?>');" >
                                         <img src="<?php echo $_layoutParamsCB['ruta_img']; ?>mapa.jpg" border='0' height='25' title='Mapa' />
                                     </a>
                                 </td>
@@ -272,13 +272,13 @@
                     <!-- RESERVAR -->
                     <table cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered" align="center">
                         <tr>
-                            <td style="font-size: 12px; text-align: center"> SINGLE </td>
-                            <td style="font-size: 12px; text-align: center"> DOBLE </td>
-                            <td style="font-size: 12px; text-align: center"> TRIPLE </td>
-                            <td style="font-size: 12px; text-align: center"> CHILD 1</td>
-                            <td style="font-size: 12px; text-align: center"> CHILD 2 </td>
-                            <td style="font-size: 12px; text-align: center"> PLAN FAMILIAR </td>
-                            <td style="font-size: 12px; text-align: center"> </td>
+                            <td style="font-size: 14px; text-align: center"> <b>SINGLE</b> </td>
+                            <td style="font-size: 14px; text-align: center"> <b>DOBLE</b> </td>
+                            <td style="font-size: 14px; text-align: center"> <b>TRIPLE </b></td>
+                            <td style="font-size: 14px; text-align: center"> <b>CHILD 1</b></td>
+                            <td style="font-size: 14px; text-align: center"> <b>CHILD 2 </b></td>
+                            <td style="font-size: 14px; text-align: center"> <b>PLAN FAMILIAR </b></td>
+                            <td style="font-size: 14px; text-align: center"> </td>
                         </tr>
 
                         <tr>
@@ -317,7 +317,7 @@
 
 
                                 <a id="btnDP_reservar_<?php echo $cntDP; ?>" class="btn btn-success btn-sm" style="width: 88px;"
-
+                                   data-toggle="modal" href="#myModal2"
                                    onclick="Programa.prototype.abrirForm('<?php echo $cntDP; ?>',
                                                    '<?php echo BASE_URL; ?>programas/pasajeros',
                                                    '<?php echo $objOpcProg->getVVenSGL(); ?>',
@@ -332,8 +332,16 @@
                                                     <?php echo htmlspecialchars(json_encode($DP_planAl)); ?>,
                                                     <?php echo htmlspecialchars(json_encode($DP_catHot)); ?>,
                                                    '<?php echo$objOpcProg->getChd1(); ?>',
-                                                   '<?php echo$objOpcProg->getChd2(); ?>'
-                                                   );"> RESERVAR 
+                                                   '<?php echo$objOpcProg->getChd2(); ?>',
+                                                   '<?php echo$objOpcProg->getEstado();?>',
+                                                   <?php if($objOpcProg->getEstado() == 'AVAILABLE'){?>
+                                                       'Reserva'
+                                                     <?php }else{ ?>
+                                                         'Cotizaci&oacute;n'
+                                                     <?php } ?>
+                                                   );"><?php if($objOpcProg->getEstado() == 'AVAILABLE'){?>
+                                                                           RESERVAR
+                                                   <?php }else{ ?> COTIZAR<?php } ?>
                                 </a>
                             </td>
                         </tr>
