Agregando form-control a los input que faltaban

--- a/views/booking/consultarReserva.phtml
+++ b/views/booking/consultarReserva.phtml
@@ -74,11 +74,11 @@ $(function()
                                                 <tr>
                                                     <td>Fecha desde:</td>
                                                     <td>
-                                                        <input type="text" id="txtFechaDesde-ConsRes" name="txtFechaDesde-ConsRes" style="width:100px" value="<?php echo $this->CR_fechaIni; ?>">
+                                                        <input class="form-control" type="text" id="txtFechaDesde-ConsRes" name="txtFechaDesde-ConsRes" style="width:100px" value="<?php echo $this->CR_fechaIni; ?>">
                                                     </td>
                                                     <td>Fecha hasta:</td>
                                                     <td>
-                                                        <input type="text" id="txtFechaHasta-ConsRes" name="txtFechaHasta-ConsRes" style="width:100px" value="<?php echo $this->CR_fechaFin; ?>">
+                                                        <input class="form-control" type="text" id="txtFechaHasta-ConsRes" name="txtFechaHasta-ConsRes" style="width:100px" value="<?php echo $this->CR_fechaFin; ?>">
                                                     </td>
                                                     <td rowspan="2">&nbsp;&nbsp;&nbsp;
                                                         <input type="button"  id="btnConsBooking" class="btn btn-primary" value="Buscar">
