--- a/views/hoteles/hoteles.phtml
+++ b/views/hoteles/hoteles.phtml
@@ -78,7 +78,7 @@
                                                 </td>
                                                 <td>Nombre:</td>
                                                 <td>
-                                                    <input type="text" id="txtNombre-Hot" name="txtNombre-Hot" style="width:200px" placeholder="Ingrese nombre hotel" value="<?php echo Session::get('sess_H_nombre'); ?>">
+                                                    <input type="text" id="txtNombre-Hot" name="txtNombre-Hot" class="form-control" style="width:200px" placeholder="Ingrese nombre hotel" value="<?php echo Session::get('sess_H_nombre'); ?>">
                                                 </td>
                                                 <td>Categoria:</td>
                                                 <td>
