--- a/views/voucher/imagenes.phtml
+++ b/views/voucher/imagenes.phtml
@@ -29,7 +29,7 @@
                                 
                                     <div class="col-md-12">
                                     
-                                        <select name="cmbCategoria_lVA" id="cmbCategoria_lVA" style="width:400px" onchange="procesoCargaDiv(this.value, 'lVA_divDetalle', '<?php echo BASE_URL ?>voucher/logo')">
+                                        <select class="form-control" name="cmbCategoria_lVA" id="cmbCategoria_lVA" style="width:400px" onchange="procesoCargaDiv(this.value, 'lVA_divDetalle', '<?php echo BASE_URL ?>voucher/logo')">
                                             <option value="0">Seleccione una agencia</option>
                                            <?php
                                             if($this->objAgencias)
