se agrega boton de pago y se cambia mensaje de error en paginas de acceso de negado

--- a/views/programas/centerBox/detallePasajeros.phtml
+++ b/views/programas/centerBox/detallePasajeros.phtml
@@ -222,7 +222,7 @@ for ($i = 1; $i <= $this->cntHab; $i++) {
             </center>
             <br>
             <center>
-                <a id="btnReservarPrograma" id="btnReservarPrograma" class="btn btn-success" onclick=" Programa.prototype.procesoEnviaFormProg('frmReservarPrograma', '<?php echo BASE_URL; ?>programas/procesoReserva', 'btnReservarPrograma', 'divPopupPRG', '<?php echo $this->form; ?>', '<?php echo BASE_URL; ?>programas/programasCondiciones')"> RESERVAR </a>
+                <a id="btnReservarPrograma" id="btnReservarPrograma" class="btn btn-success" onclick=" Programa.prototype.procesoEnviaFormProg('frmReservarPrograma', '<?php echo BASE_URL; ?>programas/procesoReserva', 'btnReservarPrograma', 'divPopupPRG', '<?php echo $this->form; ?>', '<?php echo BASE_URL; ?>programas/programasCondiciones')"> <?php echo $this->boton; ?> </a>
             </center>
         </form>
     </div>
